[gd_scene load_steps=26 format=2]

[ext_resource path="res://bosses/boss.gd" type="Script" id=1]
[ext_resource path="res://statemachine/statemachine.gd" type="Script" id=2]
[ext_resource path="res://bosses/loli/loli_state_walking.gd" type="Script" id=3]
[ext_resource path="res://bosses/loli/loli_state_attacking.gd" type="Script" id=4]
[ext_resource path="res://bosses/loli/loli_state_dying.gd" type="Script" id=5]
[ext_resource path="res://bosses/boss_health_breakpoints.gd" type="Script" id=6]
[ext_resource path="res://bosses/loli/loli_brain.gd" type="Script" id=7]
[ext_resource path="res://bosses/boss_attack.gd" type="Script" id=8]
[ext_resource path="res://bosses/loli/loli_pattern.gd" type="Script" id=9]
[ext_resource path="res://bosses/loli/explode_pattern.gd" type="Script" id=10]
[ext_resource path="res://bosses/boss_sprite_animation.gd" type="Script" id=11]
[ext_resource path="res://sprites/bosses/loli/loli_idle1.png" type="Texture" id=12]
[ext_resource path="res://sprites/bosses/loli/loli_idle2.png" type="Texture" id=13]
[ext_resource path="res://sprites/bosses/loli/loli_idle3.png" type="Texture" id=14]
[ext_resource path="res://sprites/bosses/loli/loli_idle4.png" type="Texture" id=15]
[ext_resource path="res://sprites/bosses/loli/loli_idle5.png" type="Texture" id=16]
[ext_resource path="res://sprites/bosses/loli/loli_shooting3.png" type="Texture" id=17]
[ext_resource path="res://sprites/bosses/loli/loli_shooting4.png" type="Texture" id=18]
[ext_resource path="res://sprites/bosses/loli/loli_shooting5.png" type="Texture" id=19]
[ext_resource path="res://sprites/bosses/loli/loli_shooting1.png" type="Texture" id=20]
[ext_resource path="res://sprites/bosses/loli/loli_shooting2.png" type="Texture" id=21]
[ext_resource path="res://animation/sprite_flicker.gd" type="Script" id=22]

[sub_resource type="CapsuleShape2D" id=1]
radius = 28.1439
height = 47.9328

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "attack",
"speed": 16.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "flotating"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 2, -2 ),
"update": 0,
"values": [ Vector2( 0, 7 ), Vector2( 0, -7 ) ]
}

[node name="loli" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="statemachine" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = NodePath("state_walking")
initial_call_deferred = true

[node name="state_walking" type="Node" parent="statemachine"]
script = ExtResource( 3 )

[node name="state_attacking" type="Node" parent="statemachine"]
script = ExtResource( 4 )

[node name="state_dying" type="Node" parent="statemachine"]
script = ExtResource( 5 )

[node name="health_breakpoints" type="Node" parent="."]
script = ExtResource( 6 )

[node name="brain" type="Node" parent="."]
script = ExtResource( 7 )

[node name="attack" type="Node" parent="."]
script = ExtResource( 8 )

[node name="loli_pattern" type="Node" parent="attack"]
script = ExtResource( 9 )

[node name="explode_pattern" type="Node" parent="attack"]
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprite_animation" type="Node2D" parent="."]
position = Vector2( 0, -5.41515 )
script = ExtResource( 11 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="sprite_animation"]
position = Vector2( 0.513351, -0.513351 )
scale = Vector2( 2, 2 )
frames = SubResource( 2 )
animation = "attack"
frame = 3
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="sprite_animation"]
autoplay = "flotating"
anims/flotating = SubResource( 3 )

[node name="sprite_flicker" type="Node" parent="sprite_animation"]
script = ExtResource( 22 )
color_flicker = Color( 4, 4, 4, 1 )
flick_duration = 0.1

